--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Y</string>
+
+    <!-- Emotions -->
+    <string name="emotion_anger">😡</string>
+    <string name="emotion_confusion">😕</string>
+    <string name="emotion_disgust">🤮</string>
+    <string name="emotion_fear">😱</string>
+    <string name="emotion_happiness">😄</string>
+    <string name="emotion_sadness">😭</string>
+    <string name="emotion_shame">😞</string>
+    <string name="emotion_surprise">😳</string>
+    <string name="emotion_laughter">💀</string>
+
 </resources>
