--- a/MyApplication2/app/src/main/res/values/strings.xml
+++ b/MyApplication2/app/src/main/res/values/strings.xml
@@ -11,14 +11,16 @@
 
     <string-array name="mood_array">
         <item>😡</item>
-        <item>😵‍</item>
-        <item>🤢</item>
-        <item>😨</item>
-        <item>😁</item>
+        <item>😕</item>
+        <item>🤮</item>
+        <item>😱</item>
+        <item>😄</item>
         <item>😭</item>
+        <item>😞</item>
         <item>😳</item>
-        <item>🤯</item>
+        <item>💀</item>
     </string-array>
+
 
     <string-array name="social_situation_array">
         <item>Alone</item>
