--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <!--  Mood list content  -->
     <string name="follow">Follow</string>
     <string name="following">Following</string>
+    <string name="requested">Requested</string>
 
     <!--add mood form strings-->
     <string name="back">Back</string>
