--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -88,8 +88,8 @@
     <string name="update_this_mood">Update this mood</string>
 
     <!-- Date filter buttons -->
-    <string name="minDateBtnText">Min</string>
-    <string name="maxDateBtnText">Max</string>
+    <string name="minDateBtnText">Min Date</string>
+    <string name="maxDateBtnText">Max Date</string>
 
     <string-array name="mood_array">
         <item>😡</item>
