--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -77,7 +77,8 @@
     <!--add mood form strings-->
     <string name="back">Back</string>
     <string name="insert_image">Insert Image</string>
-    <string name="hint_reason">Why do you feel this way?</string>
+    <string name="hint_reason_why_text">Why do you feel this way?</string>
+    <string name="hint_trigger">What was the trigger?</string>
     <string name="hint_explanation">Explain your mood...</string>
     <string name="share_location">Share location with others</string>
     <string name="submit">Submit</string>
