--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -91,6 +91,8 @@
     <!-- Date filter buttons -->
     <string name="minDateBtnText">Min Date</string>
     <string name="maxDateBtnText">Max Date</string>
+    <string name="private_this_mood_event">Private this Mood Event</string>
+    <string name="privateString">Private</string>
 
     <string-array name="mood_array">
         <item>😡</item>
