make follow button its own class

--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
 
     <string name="mood_following">Mood Following</string>
     <string name="mood_map">Mood Map</string>
+    <string name="search">Search</string>
     <string name="user_profile">User Profile</string>
     <string name="user">User</string>
     <string name="date_and_time">Date and Time</string>
