Fix spinners, social situation is optional for updating, rewrote most of update or delete activity

--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -39,6 +39,19 @@
         <item>#F28E3D</item>
     </string-array>
 
+    <!-- Emotion Text -->
+    <string-array name="emotionTextArray">
+        <item>Anger</item>
+        <item>Confusion</item>
+        <item>Disgust</item>
+        <item>Fear</item>
+        <item>Happiness</item>
+        <item>Sadness</item>
+        <item>Shame</item>
+        <item>Surprise</item>
+        <item>Laughter</item>
+    </string-array>
+
 
     <!-- Values -->
     <string name="email">Email</string>
