solved the problem of multiple moods showing up at the same location

--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="emotion_shame_emoji">😞</string>
     <string name="emotion_surprise_emoji">😳</string>
     <string name="emotion_laughter_emoji">💀</string>
+    <string name="more_than_one_mood">➕</string>
 
     <!-- emoticon -->
     <string-array name="emotionEmoticonArray">
